--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -11,7 +11,7 @@
 
 CTL_DID_YOU_KNOW=Did you know?
 CTL_OpeningBrowser=Opening browser ...
-CTL_NEXTSTARTUP=\ Do not show Welcome Sreen again
+CTL_NEXTSTARTUP=\ Do not show Welcome Screen again
 MNE_NEXTSTARTUP=D
 CTL_START_TITLE=Welcome to NetBeans
 CTL_NEXT_BUTTON=Next Tip
