More detailed error message (#21236)

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -72,7 +72,13 @@ HINT_WinBrowserName=HTML browser using DDE communication (only for Windows).
 PROP_DDEServer=DDE Server
 HINT_DDEServer=Name of DDE server to communicate with.
 MSG_CannotUseBrowser=Browser cannot be used on this platform.
-MSG_win_browser_invocation_failed=Could not access the URL through the external browser. Check the configuration.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
+MSG_win_browser_invocation_failed=Could not access the URL through the external browser. Check the \
+browser configuration.  From the Tools menu, choose Options.  In \
+the Options window, expand the IDE Configuration node.  Then expand \
+the Server and External Tool Settings node followed by the Web \
+Browsers node. Select the external browser type and modify the Browser \
+Executable property if necessary.
+
 #BrowserPropertyEditor
 LBL_SystemDefaultBrowser=<Default System Browser>
 
