#17913: "Mount > Archive" action name should make it clear that WAR is included

--- a/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
@@ -21,9 +21,8 @@ HINT_rootDirectory=The root directory of this file system (should be the top of 
 
 # JAR
 PROP_archiveFile=Archive File
-HINT_archiveFile=The JAR or Zip file this file system represents.
-LAB_JarFileFilter=JAR & Zip files
-
+HINT_archiveFile=The archive file this file system represents.
+LAB_JarFileFilter=Archive Files (*.jar, *.zip, *.war, *.ear)
 
 # Properties of FileSystem
 PROP_readOnly=Read Only
