--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -22,9 +22,9 @@ CTL_LocalFSAlreadyMountedHidden_Title=Confirm Filesystem Visible
 MSG_LocalFSNoMounted=The filesystem does not exist.
 
 # mount directory dialog
-CTL_JarArchivesMask=JAR and Zip Archives
-CTL_MountJar_Dialog_Title=Mount JAR File
-MSG_JarFSAlreadyMounted=JAR file already added.
+CTL_JarArchivesMask=Archive Files
+CTL_MountJar_Dialog_Title=Mount Archive File
+MSG_JarFSAlreadyMounted=Archive file already added.
 
 #ArgumentsDialog
 CTL_SetArgumentsTitle=Set Arguments
