--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -546,7 +546,7 @@ Bookmarks=&Bookmarks
 Templates/Folder=Folder
 Templates/Mount=Filesystems
 Templates/Mount/org-netbeans-core-ExLocalFileSystem.settings=Local Directory
-Templates/Mount/org-netbeans-core-ExJarFileSystem.settings=Archive (JAR, Zip)
+Templates/Mount/org-netbeans-core-ExJarFileSystem.settings=Archive File
 Mount=Filesystems Settings
 
 # ModuleSelectionPanel
