More detailed error message (#21236)

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -42,7 +42,12 @@ HINT_ExtBrowserName=External HTML browser
 HINT_SimpleExtBrowser=HTML browser that is brought up in a separate process every time a URL is selected for display from within the IDE.
 CTL_SimpleExtBrowser=External Browser (Command Line)
 
-EXC_Invalid_Processor=Cannot create process. Check that a valid external browser property is set.  In the Options window, expand IDE Configuration.  Then expand Server and External Tool Settings and select Web Browsers.
+EXC_Invalid_Processor=Cannot create process. \
+Check the browser configuration.  From the Tools menu, choose Options.  In \
+the Options window, expand the IDE Configuration node.  Then expand \
+the Server and External Tool Settings node followed by the Web \
+Browsers node. Select the external browser type and modify the Browser \
+Executable property if necessary.
 MSG_BrowserExecutorHint={URL} = URL of the page to be loaded by the web browser\n
 MSG_use_win=Reusing old window 
 MSG_done=Done
