--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -69,8 +69,15 @@ MSG_ClassPathServletDescr=Servlet for handling IDE system class path requests
 MSG_BaseServletDescr=Base servlet for servlets which access IDE Open APIs
 MSG_RepositoryServletDescr=Servlet for handling IDE Filesystems requests
 MSG_onlyRootOnUnix=Only root can open port lower than 1024 on UNIX machines.
+MSG_MappingsConflict=There can be conflicts in mappings specified for accessing resources through internal HTTP server.
 HINT_JavadocBase=Starting URL for browsing the IDE Javadoc documentation.
 PROP_JavadocBase=Base Javadoc URL
+
+# JavadocServlet
+MSG_JavadocListingTitle=List of javadocs
+MSG_DirectoryListing=Directory listing:
+MSG_ParentDirectory=Parent directory
+
 MSG_JavadocServletDescr=Servlet for handling IDE Javadoc requests
 
 #WrapperServlet.class
