Provide just message when there are no differences. Do not open the graphical diff panes. This is a fix of issue #21404.

--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -17,7 +17,7 @@ DiffComponent.nextButton.mnemonic=N
 DiffComponent.prevButton.toolTipText=Previous Difference
 DiffComponent.prevButton.mnemonic=P
 
-NoDifferenceInFile=No differences were found in {0}.
+MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
 GraphicalDiffVisualizer.displayName=Graphical Diff Viewer
 GraphicalDiffVisualizer.shortDescription=
