--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -11,6 +11,8 @@
 
 DefaultDiff.displayName=Built In Diff Service
 
+MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
+
 MSG_ProvidersMissing=There are no diff providers registered in the system
 MSG_VisualizersMissing=There are no diff visualizers registered in the system
 
