#19667 Change of the titles in the mounting wizard.

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -63,15 +63,19 @@ ACSD_portField=n/a
 #{0} = comment passed by the panel
 #{1} = comment passed by the iterator
 CTL_TemplateTitle=New... {0} {1}
-LAB_TemplateChooserPanelName=- Template Chooser
-LAB_SelectTemplateBorder=Select a Template
+LAB_TemplateChooserPanelName=Choose Filesystem type
+LAB_SelectTemplateBorder=Select Filesystem type
 Msg_attr_change_error=Could not change attributes on the {0} file.
 MSG_NoDescription=No description
-LAB_TemplateDescriptionBorder=Template Description
-LAB_TargetLocationPanelName=- Target Location
+LAB_TemplateDescriptionBorder=New Filesystem description
+LAB_TargetLocationPanelName=Target Location
 LAB_TargetLocationDescription=Please select a package for the newly created object or enter the package name below.
 LAB_SelectPackageBorder=Select Package
-LAB_TemplateDescriptionBorder=Template Description
+LAB_SelectTemplateBorder_Mnemonic=S
+LAB_TemplateDescriptionBorder_Mnemonic=T
+ACSD_TemplatesTree=N/A
+ACSD_TemplateWizard1=N/A
+
 #Default package for a new from template
 LAB_TemplatePackageName=
 
