--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -77,34 +77,44 @@ workspaceswitcher
     <taskdef name="configmods" classname="org.netbeans.nbbuild.ConfigureModules" classpath="nbantext.jar"/>
     <taskdef name="makeupdatedesc" classname="org.netbeans.nbbuild.MakeUpdateDesc" classpath="nbantext.jar"/>
     <taskdef  name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="nbantext.jar"/>
+
+    <!-- Read the user property file at first -->
+    <property file="user.build.properties"/>
+
+    <!-- Read standard property file -->
+    <property file="build.properties"/>
+
     <!-- Overridable. Note: need not necessarily be a number at all): -->
     <property name="buildnum" value="dev-${buildnumber}"/>
-    <property name="netbeans.dest" value="netbeans"/>
-    <property name="test.user.dir" location="testuserdir"/>
-    <!-- For example, "-nogui -nosplash" is useful on headless machines: -->
-    <property name="sanitystart.args.additional" value=""/>
-    <property name="tryme.args.additional" value=""/>
     <!-- Best to leave this alone, though, unless you know what you are doing: -->
     <property name="sanitystart.args" value=" -J-Dnetbeans.close=true -J-Dnetbeans.debug.exceptions=true ${sanitystart.args.additional}"/>
     <!-- But this it is OK to change: -->
     <property name="tryme.args" value=" -J-Dnetbeans.debug.exceptions=true ${tryme.args.additional}"/>
-    <!-- Only useful to override in conjunction with merge target during development: -->
-    <property name="fixedmodules" value="core,openide,core/javahelp,core/compiler,core/execution,core/ui,core/windows,core/ide"/>
+
     <!-- Override this with the Ant command, e.g. -Dmoduleconfig=superslim -->
     <property name="moduleconfig" value="stable"/>
+
     <!-- You can also explicitly set a particular list of modules if you prefer: -->
     <!-- -Dmodules=foo,bar,... (do not include core or openide) -->
+
     <configmods property="modules" selectedconfig="${moduleconfig}">
       <config name="platform" modules=""/>
-      <config name="superslim" modules="classfile,clazz,editor,html,image,java,openidex,projects,text,utilities"/>
-      <config name="slim" modules="autoupdate,beans,classfile,clazz,debuggercore,debuggerjpda,debuggertools,editor,form,html,httpserver,httpserver/servletapi,image,java,openidex,projects,text,utilities"/>
+
+      <config name="superslim" modules="${config.superslim}"/>
+
+      <config name="slim" modules="${config.slim}"/>
       <!-- [PENDING] A poor name; 'standard' would be more in line with the CVS pseudomodule. -->
-      <config name="stable" modules="ant,ant/docs,apisupport/lite,applet,autoupdate,beans,classfile,clazz,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,form,html,httpserver,httpserver/servletapi,i18n,image,j2eeserver,jarpackager,java,javacvs,javadoc,jndi,openidex,projects,properties,rmi,scripting,text,tomcatint/tomcat32,usersguide,utilities,vcscore,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,xml/tax,xml/core,xml/catalog,xml/tools,xml/text-edit,xml/tree-edit,xml/css"/>
-      <config name="stable-with-apisupport" modules="ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,clazz,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,form,html,httpserver,httpserver/servletapi,i18n,image,j2eeserver,jarpackager,java,javacvs,javadoc,jndi,openidex,projects,properties,rmi,scripting,text,tomcatint/tomcat32,usersguide,utilities,vcscore,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,xml/tax,xml/core,xml/catalog,xml/tools,xml/text-edit,xml/tree-edit,xml/css"/>
-      <config name="bloated" modules="ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,classclosure,clazz,cpp,cpplite,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,externaleditor,form,freestylebrowser,html,httpserver,httpserver/servletapi,i18n,icebrowser,image,innertesters,j2eeserver,jarpackager,java,javacvs,javadoc,logger,makefile,monitor,multicompile,objectbrowser,openidex,projects,properties,remotefs,rmi,schema2beans,scripting,serialversion,sysprops,text,tomcatint/tomcat32,tomcatint/tomcat40,usersguide,utilities,vcscore,vcscvs,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,web/jspdebug,web/advanced,web/taglibed,xml/tax,xml/core,xml/catalog,xml/tools,xml/text-edit,xml/tree-edit,xml/css,openidex/looks"/>
+
+      <config name="stable" modules="${config.stable}"/>
+
+      <config name="stable-with-apisupport" modules="${config.stable-with-apisupport}"/>
+
+      <config name="bloated" modules="${config.bloated}"/>
       <!-- You are on your own for getting the binaries for some of these: -->
-      <config name="bloated-plus-extrabins" modules="ant,ant/docs,apisupport,apisupport/lite,apisupport/ant,apisupport/apidocs,applet,autoupdate,beans,classfile,classclosure,clazz,cpp,cpplite,debuggercore,debuggerjpda,debuggertools,diff,editor,extbrowser,externaleditor,form,freestylebrowser,html,httpserver,httpserver/servletapi,i18n,icebrowser,image,innertesters,j2eeserver,jarpackager,java,javacvs,javadoc,jini,logger,makefile,monitor,multicompile,objectbrowser,openidex,projects,properties,remotefs,rmi,schema2beans,scripting,serialversion,sysprops,text,tomcatint/tomcat32,tomcatint/tomcat40,usersguide,utilities,vcscore,vcscvs,vcscvs/compat,vcsgeneric,web/servletapi23,web/core,web/jspparser,web/jspsyntax,web/jspdebug,web/advanced,web/taglibed,xml/tax,xml/core,xml/catalog,xml/tools,xml/text-edit,xml/tree-edit,xml/css"/>
+
+      <config name="bloated-plus-extrabins" modules="${config.bloated-plus-extrabins}"/>
     </configmods>
+
   </target>
 
   <target name="check-for-binaries" depends="bootstrap-init" unless="have-binaries-already">
