Fix of 21063. The apache's RE was causing the startup to be slower by 2%, thus it has been replaced by different implementation. On JDK1.4 we use util.regex package - the code is very simple. On JDK1.3 we fallback to our own regular automata implementation, which is a bit harder to read, but fullfils all tests as the 1.4 impl does. The build script has been modified to support conditional compilation for 1.4. All classes that end with 14.java will be compiled just if running on jdk1.4

--- a/openide/build.xml
+++ b/openide/build.xml
@@ -27,10 +27,15 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="checklinks" classname="org.netbeans.nbbuild.CheckLinks" classpath="../nbbuild/nbantext.jar:${binroot}/core/release/lib/ext/regexp.jar"/>
 
+  <target name="init-14">
+    <available property="jdk14" classname="java.lang.CharSequence" />
+  </target>
+  
   <target name="compile-regular">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <!-- Needs core, it is deprecated anyway: -->
       <exclude name="org/openide/loaders/ExtensionListEditor.java"/>
+      <exclude name="org/openide/**/*14.java"/>
       <bootclasspath>
         <!-- XXX not nice to use undocumented property here: -->
         <pathelement path="${sun.boot.class.path}"/>
@@ -57,8 +62,26 @@ Microsystems, Inc. All Rights Reserved.
       </classpath>
     </javac>
   </target>
-  
-  <target name="compile" depends="13javac-workaround,compile-regular,compile-preprocessed"
+
+  <target name="compile-14" if="jdk14" >
+    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
+      <include name="org/openide/**/*14.java"/>
+      <bootclasspath>
+        <!-- XXX not nice to use undocumented property here: -->
+        <pathelement path="${sun.boot.class.path}"/>
+        <pathelement location="openide-13javac-workaround.jar"/>
+      </bootclasspath>
+<!--
+      <classpath>
+        <pathelement location="${binroot}/core/release/lib/ext/regexp.jar"/>        
+	<pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
+        <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
+      </classpath>
+-->      
+    </javac>
+  </target>
+    
+  <target name="compile" depends="init-14,13javac-workaround,compile-regular,compile-preprocessed,compile-14"
           description="Compile all source files but do not package them."/>
   
   <target name="compile-preprocessed" depends="preprocess" >
