The merge is changed to a TopComponent, however it should simulate a dialog. Due to accessibility problems it should not be a non-modal dialog. It has a tabbed pane, individual merge panels will "dock" into this tabbed pane. A merge control class introduced.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -20,3 +20,9 @@ MergePanel.acceptLeftButton.text=Accept
 MergePanel.acceptAndNextLeftButton=Accept & Next
 MergePanel.acceptRightButton.text=Accept
 MergePanel.acceptAndNextRightButton=Accept & Next
+
+BTN_OK=null
+
+BTN_Cancel=Cancel
+
+BTN_Help=Help
