help menu localization

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -930,3 +930,7 @@ OpenIDE-Module-Name=Database Explorer
 OpenIDE-Module-Display-Category=Database
 OpenIDE-Module-Short-Description=Views and modifies the structure of the connected database.
 OpenIDE-Module-Long-Description=Uses the Explorer to view the current structure of the connected database tables and their data while you are developing database applications or applets within the IDE.
+
+# mf-layer localizations
+Menu/Help/HelpShortcuts/org-netbeans-modules-db-mainpage.xml=Database Explorer Module Help
+Actions/Help/org-netbeans-modules-db-mainpage.xml=Database Explorer Module Help
