--- a/db/build.xml
+++ b/db/build.xml
@@ -23,6 +23,12 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
+  <target name="init">
+    <tstamp/>
+    <property name="buildnumber" value="${DSTAMP}-${TSTAMP}"/>
+    <echo message="buildnumber = ${buildnumber}"/>
+  </target>
+
   <target name="precompile">
     <javac srcdir="libsrc" destdir="libsrc" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
@@ -51,7 +57,7 @@ Microsystems, Inc. All Rights Reserved.
 <!--    <tojar srcdir="src" unpackeddir="tojar"/>-->
   </target>
 
-  <target name="jars" depends="tojar,compile">
+  <target name="jars" depends="init,tojar,compile">
     <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
