Add the LineWrappingIndentEngine to the IDE editor too with all the options stuff and so on.

--- a/editor/src/org/netbeans/modules/editor/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/Bundle.properties
@@ -17,8 +17,10 @@ OpenIDE-Module-Long-Description=The Editor module enables you to edit source fil
 Bookmark_Tooltip=Bookmark
 Services/IndentEngine/org-netbeans-modules-editor-java-JavaIndentEngine.settings=Java Indentation Engine
 Services/IndentEngine/org-netbeans-modules-editor-SimpleIndentEngine.settings=Simple Indentation Engine
+Services/IndentEngine/org-netbeans-modules-editor-html-LineWrapIndentEngine.settings=Line Wrapping Indentation Engine
 Templates/Services/IndentEngine/org-netbeans-modules-editor-java-JavaIndentEngine.settings=Java Indentation Engine
 Templates/Services/IndentEngine/org-netbeans-modules-editor-SimpleIndentEngine.settings=Simple Indentation Engine
+Templates/Services/IndentEngine/org-netbeans-modules-editor-html-LineWrapIndentEngine.settings=Line Wrapping Indentation Engine
 
 MSG_NegativeValue=Negative value is not allowed
 MSG_OutOfRange=Value is out of range
