Justification of UNIX browser tooltip (#21268)

--- a/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
+++ b/extbrowser/src/org/netbeans/modules/extbrowser/Bundle.properties
@@ -67,7 +67,7 @@ ERR_cant_activate_browser=Error: Cannot activate browser
 
 #UnixWebBrowser
 CTL_UnixBrowserName=External Browser (UNIX)
-HINT_UnixBrowserName=Netscape HTML browser (UNIX platform implementation).
+HINT_UnixBrowserName=An HTML browser, such as Netscape Navigator, that runs on UNIX-based platforms.
 MSG_UnixBrowserHint=\
     {params} = set of special parameters to activate the browser window with requested URL\n\
 
