--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -55,7 +55,19 @@ PROP_completionAutoPopupDelay=Delay of Completion Window Auto Popup
 HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the completion window.
 
 PROP_displayGoToClassInfo=Display Go To Class Info Window
-HINT_displayGoToClassInfo=If true, Info Window will be displayed before Go To Class feature
+HINT_displayGoToClassInfo=If true, Info Window will be displayed before Go To Class feature.
+
+PROP_javaDocBGColor=Background Color of JavaDoc Popup Window
+HINT_javaDocBGColor=Background color of javadoc popup window
+
+PROP_javaDocAutoPopupDelay=Delay of JavaDoc Window Auto Popup
+HINT_javaDocAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the javaDoc window.
+
+PROP_javaDocPreferredSize=JavaDoc Preferred Size
+HINT_javaDocPreferredSize=Preferred size of javaDoc popup window.
+
+PROP_javaDocAutoPopup=Auto Popup JavaDoc Window
+HINT_javaDocAutoPopup=If True, the javaDoc window automatically appears when appropriate.
 
 PROP_expandTabs=Expand Tabs to Spaces
 HINT_expandTabs=If True, automatically converts tabs in the document to spaces padded to the same column.
