Fixed bug #19391 - Validation for driver name and driver class implemented. If driver name or driver class is missing, error message is displayed.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -299,6 +299,7 @@ AddDriverDriverURL_Mnemonic = D
 AddDriverDatabasePrefix = Database URL prefix:
 AddDriverDatabasePrefix_Mnemonic = U
 AddDriverURLNotes = Note: the package (ZIP/JAR, typically) containing the driver code must be in the NetBeans classpath (add to the lib/ext/ directory).
+AddDriverErrorMessage = Insufficient information to add new driver. Please check that the driver name and driver class are entered correctly.
 
 ACS_AddDriverDriverNameA11yDesc = Name of the driver.
 ACS_AddDriverDriverNameTextFieldA11yName = Driver text field
