Fixed issue #20230, removed Options registration from manifest - performance reason.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -935,3 +935,6 @@ OpenIDE-Module-Long-Description=Uses the Explorer to view the current structure 
 # mf-layer localizations
 Menu/Help/HelpShortcuts/org-netbeans-modules-db-mainpage.xml=Database Explorer Module Help
 Actions/Help/org-netbeans-modules-db-mainpage.xml=Database Explorer Module Help
+
+# Options
+Services/org-netbeans-modules-db-explorer-DatabaseOption.settings=Database Explorer
