IN=6233 Fix monitor.jar's build so monitor_ja.jar includes a Ja localized file that is currently missing.

--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -202,6 +202,7 @@ Microsystems, Inc. All Rights Reserved.
           <include name="org/netbeans/modules/web/monitor/resources/"/>
           <include name="org/netbeans/modules/web/monitor/MonitorModule**"/>
           <include name="org/netbeans/modules/web/monitor/Bundle.properties"/>
+          <include name="org/netbeans/modules/web/monitor/Bundle_*.properties"/>
         </patternset>
       </fileset>
     </locjar>
