--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -540,6 +540,8 @@ Toolbars/View=View
 Toolbars/Debugging.xml=Debugging
 Toolbars/Standard.xml=Standard
 Toolbars/Memory=Memory
+Toolbars/WorkspaceSwitcher=Workspace Switcher
+Toolbars/StatusLine=Status Line
 Actions/Tools=Tools
 Projects=Projects
 Bookmarks=&Bookmarks
