--- a/db/libsrc/org/netbeans/lib/ddl/resources/Bundle.properties
+++ b/db/libsrc/org/netbeans/lib/ddl/resources/Bundle.properties
@@ -169,8 +169,8 @@ EXC_Unknown=unknown object name
 EXC_NoFormatSpec=no format specified
 EXC_UnableLocateObject=unable to locate binded object {0}
 EXC_UnableLocateType=unable to locate type {0} in: {1}
-EXC_UnableToFormat=Unable to format a command:
-EXC_UnableToExecute=Unable to execute a command:
+EXC_UnableToFormat=Unable to format command:
+EXC_UnableToExecute=Unable to execute command:
 EXC_UnableToBind=unable bind type {0}, table: {1}
 EXC_NoConnection=no connection available
 EXC_NoDBMetadata=no database metadata available
